# cestus

./: README.md  pyproject.toml
cestus/: core.py  format.py
tests/: test_cestus.py  tests_cestus.py
