[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["NikitaSharov"]
description = ""
name = "cestus"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
blosc = "^1.11.2"
numpy = "^2.0.1"
orjson = "^3.10.6"
pytest = "^8.3.1"
python = "3.12.3"
